invisible SingleSelect should have a default 1px border (to prevent jumping when active)

--- a/src/components/SingleSelect/SingleSelect.less
+++ b/src/components/SingleSelect/SingleSelect.less
@@ -23,7 +23,7 @@
 		white-space: nowrap;
 
 		&&-is-invisible {
-			border: 0;
+			border: 1px solid transparent;
 			background-color: transparent;
 		}
 
